linux, elastic